test/org/midica/testfiles/failing/pattern-undefined-2.midica
INCLUDE inc/instruments.midica

0  c,d,e  pat_a( y )

PATTERN pat_a
	0  /42
END
